More attempts at fixing the image alignment and captions

--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
   padding-top: 3%;
   border-bottom: 5px solid;
   border-color: #7d97ad;
-
+  width: 90%;
 }
 
 .trainer-logo {
@@ -38,17 +38,18 @@ body {
 }
 
 .portfolio_description {
-  pdding-right: 3%;
+  padding-right: 3%;
 }
 
 /*information about me and headshot*/
 
 .aboutMe {
+  width: 100%;
 
 }
 
 #headshot {
-  max-width: 20%;
+  width: 20%;
   border-radius: 20%;
   float: right;
   margin-top: auto;
@@ -79,44 +80,40 @@ body {
 }
 
 .flex-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 90%;
 }
 
 .work-logo {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: space-around;
+
 }
 
 .caption {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  caption-side: bottom;
+  display: inline-grid;
+  
 }
 
 #codepen {
+  width: 30%;
   border: 5px solid;
   border-color: #2d3c49;
-  margin-left: 10%;
-  margin-bottom: 5%;
-  max-width: 20%;
   order: 0;
   caption-side: bottom;
 }
 
 #udacity {
-  max-width: 30%;
+  width: 30%;
   margin-top: 2%;
   margin-left: 2%;
   order: 1;
 }
 
 #freeCodeCamp {
-  max-width: 15%;
+  width: 30%;
   margin-top: 2%;
-  margin-left: 5%;
+  margin-left: 1%;
   order: 2;
 }
